--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+serviceAccountKey.json
 .coverage
 *.pyc
 .python-version
@@ -13,3 +14,4 @@ htmlcov/
 .pytest_cache/
 .vscode/
 .venv/
+/poesiacolectiva-7f23e-firebase-adminsdk-l8mvy-98cdd07015.json
